<resources>
    <string name="app_name">FinalProject</string>
    <string name="masuk">Masuk</string>
    <string name="email_nomor_telepon">Email / Nomor Telepon</string>
    <string name="contoh_example_gmail_com">Contoh : example@gmail.com</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_62">+62</string>
    <string name="buat_password">Buat Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_di_sini">Masuk di sini</string>
    <string name="masukkan_otp">Masukkan OTP</string>
    <string name="ketik_6_digit_kode_yang_dikirimkan">Ketik 6 digit kode yang dikirimkan</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="minta_kode_baru_via_email">Minta kode baru via Email</string>
    <string name="hei_mau_kemana">Hei, Mau kemana?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="pulang_pergi">Pulang-Pergi?</string>
    <string name="departure">Departure</string>
    <string name="returned">Return</string>
    <string name="passengers">Passengers</string>
    <string name="seat_class">Seat Class</string>
    <string name="cari_penerbangan">Cari Penerbangan</string>
    <string name="destinasi_favorit">Destinasi Favorit</string>
    <string name="home">Beranda</string>
    <string name="riwayat">Riwayat</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="akun">Akun</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="masukkan_kota_atau_negara">Masukkan kota atau Negara</string>
    <string name="riwayat_pesanan">Riwayat Pesanan</string>
    <string name="maaf_anda_harus_login_terlebih_dahulu">Maaf, Anda harus login terlebih dahulu!</string>
    <string name="promosi">Promosi</string>
    <string name="syarat_dan_ketentuan_berlaku">Syarat dan Ketentuan berlaku!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="punya_nama_keluarga">Punya Nama Keluarga?</string>
    <string name="nama_keluarga">Nama Keluarga</string>
    <string name="potter">Potter</string>
    <string name="title">Title</string>
    <string name="mr">Mr.</string>
    <string name="harry">Harry</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="ktp_paspor">KTP/Paspor</string>
    <string name="negara_penerbit">Negara Penerbit</string>
    <string name="data_diri_pemesanan">Data Diri Pemesanan</string>
    <string name="passenger_1_adult">Passenger 1 - Adult</string>
    <string name="reset_password">Reset Password</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="ulangi_password_baru">Ulangi Password Baru</string>
    <string name="simpan">Simpan</string>
    <string name="pencarian_terkini">Pencarian terkini</string>
    <string name="hapus">Hapus</string>
    <string name="dewasa">Dewasa</string>
    <string name="anak">Anak</string>
    <string name="bayi">Bayi</string>
    <string name="pilih">Pilih</string>
    <string name="economy">Economy</string>
    <string name="selamat">Selamat</string>
    <string name="transaksi_pembayaran_tiket_sukses">Transaksi Pembayaran Tiket Sukses!</string>
    <string name="premium_economy">Premium Economy</string>
    <string name="business">Business</string>
    <string name="first_class">First Class</string>
    <string name="bayar">Bayar</string>
    <string name="round_trip">Round Trip</string>
    <string name="lanjut_rincian_penerbangan">Lanjut Rincian Penerbangan</string>
    <string name="str_pergi">Pergi</string>
    <string name="str_pulang">Pulang</string>
    <string name="lanjut_pembayaran">Lanjut Pembayaran</string>
    <string name="password">Password</string>
</resources>