<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".view.ui.login.LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/neutral05"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmailNomorTelpon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_nomor_telepon"
        app:layout_constraintTop_toBottomOf="@id/tvMasuk"
        android:layout_marginTop="24dp"
        android:textSize="12sp"
        android:textColor="@color/neutral05"
        android:fontFamily="@font/poppinsregular"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmailNomorTelpon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        android:layout_marginTop="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/contoh_example_gmail_com">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_nomor_telepon"
        app:layout_constraintTop_toBottomOf="@id/inputEmailLay"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:textColor="@color/neutral05"
        android:fontFamily="@font/poppinsregular"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLupasPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_kata_sandi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmailLay"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:textColor="@color/darkblue04"
        android:fontFamily="@font/poppinsregular"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        android:layout_marginTop="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/masukkan_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMasuk"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        app:cornerRadius="16dp"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:fontFamily="@font/poppinsregular"
        android:backgroundTint="@color/darkblue04"
        app:layout_constraintTop_toBottomOf="@id/inputPassLay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBelumPunyaAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        app:layout_constraintTop_toBottomOf="@id/btnMasuk"
        android:layout_marginTop="300dp"
        android:textSize="14sp"
        android:layout_marginStart="55dp"
        android:textColor="@color/neutral05"
        android:fontFamily="@font/poppinsregular"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDaftarDisini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/daftar_di_sini"
        android:textColor="@color/darkblue04"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBelumPunyaAkun"
        app:layout_constraintTop_toBottomOf="@id/btnMasuk" />


</androidx.constraintlayout.widget.ConstraintLayout>